--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -226,7 +226,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.5.3</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJC - PureEQ v1.5.4</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -1042,16 +1042,23 @@
       const offset = fltArray.reduce((acc, val) => acc + val, 0) / fltArray.length;
       return offset;
     }
+    async function getNextEQIdx(idx) {
+      const filters = await fetchSafe("filters", idx);
+      for (let i = 0; i < Math.min(20, filters.length); i++) {
+        if (filters[i]["type"] === "None") {
+          return (i + 1);
+        }
+      }
+      return -1;
+    }
     async function addDialogueEnhancerFilter(idx) {
-      let rewEQIdx = 1;
       async function addPEQFilter(freq, gain, q) {
         try {
-          if (rewEQIdx < 1 || rewEQIdx > 20) {
-            throw new Error;
-          }
+          const eqIdx = await getNextEQIdx(idx);
+          if (eqIdx < 1) { throw new Error; }
           await postSafe(`${baseUrl}/${idx}/filters`, {
             filters: [{
-              "index": rewEQIdx++,
+              "index": eqIdx,
               "type": "PK",
               "enabled": true,
               "isAuto": true,
@@ -1062,7 +1069,7 @@
           }, "Filters set");
         }
         catch (error) {
-          console.error(`Failed to add DE PEQ filter <${freq}hz ${gain}dB ${q}Q> to REW EQ index#${rewEQIdx}!`);
+          console.error(`Failed to add PEQ filter <${freq}hz ${gain}dB ${q}q> - no more available EQ slots left in REW!`);
           throw new Error;
         }
       }
