--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1051,36 +1051,66 @@
       }
       return -1;
     }
-    async function addDialogueEnhancerFilter(idx) {
-      async function addPEQFilter(freq, gain, q) {
-        try {
-          const eqIdx = await getNextEQIdx(idx);
-          if (eqIdx < 1) { throw new Error; }
+    async function clearFilters(idx) {
+      const filters = await fetchSafe("filters", idx);
+      // set anything non-None to None
+      for (let i = 0; i < filters.length; i++) {
+        if (filters[i]["type"] != "None") {
           await postSafe(`${baseUrl}/${idx}/filters`, {
-            filters: [{
-              "index": eqIdx,
-              "type": "PK",
-              "enabled": true,
-              "isAuto": true,
-              "frequency": freq,
-              "gaindB": gain,
-              "q": q
-            }]
+            filters: [{ "index": i + 1, "type": "None" }]
           }, "Filters set");
         }
-        catch (error) {
-          console.error(`Failed to add PEQ filter <${freq}hz ${gain}dB ${q}q> - no more available EQ slots left in REW!`);
-          throw new Error;
-        }
       }
-      // Q value-------------------|
-      // Gain dB---------------|   |
-      // Frequency hz------|   |   |
-      await addPEQFilter(1500, 3, 0.5); // repeat and/or customize as needed
+    }
+    async function addPEQFilter(idx, freq, gain, q) {
+      try {
+        const eqIdx = await getNextEQIdx(idx);
+        if (eqIdx < 1) { throw new Error; }
+        await postSafe(`${baseUrl}/${idx}/filters`, {
+          filters: [{
+            "index": eqIdx,
+            "type": "PK",
+            "enabled": true,
+            "isAuto": true,
+            "frequency": freq,
+            "gaindB": gain,
+            "q": q
+          }]
+        }, "Filters set");
+      }
+      catch (error) {
+        console.error(`Failed to add PEQ filter <${freq}hz ${gain}dB ${q}q> - no more available EQ slots left in REW!`);
+        throw new Error;
+      }
+    }
+    async function addCustomPEQFilters(mlpIdx, cmdId, autoEQFilterIdx) {
+      await clearFilters(mlpIdx);
+      /***Customization start***/
+      if (cmdId === "C" && dialogueEnhancer) {
+        // Q value---------------------------|
+        // Gain dB-----------------------|   |
+        // Frequency hz--------------|   |   |
+        await addPEQFilter(mlpIdx, 1500, 3, 0.5); // repeat and/or customize as needed
+      }
+      // add upto 20 PEQ filters for any channel, example-
+      //if (cmdId === "FL") {
+      //  await addPEQFilter(mlpIdx, 300, 6, 2.8); // repeat and/or customize as needed
+      //  await addPEQFilter(mlpIdx, 600, -6, 1.2); // repeat and/or customize as needed
+      //  await addPEQFilter(mlpIdx, 1000, 1.5, 3.1); // repeat and/or customize as needed
+      //  await addPEQFilter(mlpIdx, 3000, 9, 5); // repeat and/or customize as needed
+      //}
+      /***Customization end***/
+      // combine custom filters with autoEQ filters
+      const customFilter = await postNext('Generate filters measurement', mlpIdx);
+      const customFilterIdx = Object.keys(customFilter.results)[0];
+      // apply custom filters to auto-EQ filters
+      const combinedFilter = await postNext('Arithmetic', [autoEQFilterIdx, customFilterIdx], {function: "A * B"});
+      await postDelete(customFilterIdx);
+      await postDelete(autoEQFilterIdx); // combined filter is at auto-EQ filter index now
     }
     async function generateFilters() {
       if (useAudyFiltering) { return; } // no need to EQ
-      /*EQ parameters start*/
+      /***Customization start***/
       // boost parameters for speakers in dB
       const speakerIndividualMaxBoost = 3;
       const speakerOverallMaxBoost = 0;
@@ -1091,7 +1121,7 @@
       const subwooferOverallMaxBoost = 3;
       const subwooferLowShelfMin = -6;
       const subwooferLowShelfMax = 6;
-      /*EQ parameters end*/
+      /***Customization end***/
       console.log(`Generating min. phase EQ filters...`);
       for (let i = 1; i <= nChannels; i++) {
         console.info(`${commandId[i].padStart(3, ".")} - equalizing channel...`);
@@ -1121,16 +1151,7 @@
         // generate filters & auto level it
         const filter = await postNext('Generate filters measurement', avgIdx);
         const filterIdx = Object.keys(filter.results)[0];
-        if (commandId[i] === "C" && dialogueEnhancer) {
-          // use the free 20 slots of mlp measurement for assigning DE filters
-          await addDialogueEnhancerFilter(mlpIdx);
-          const DEfilter = await postNext('Generate filters measurement', mlpIdx);
-          const DEFilterIdx = Object.keys(DEfilter.results)[0];
-          // apply DE filters to auto-EQ filters
-          const combinedFilter = await postNext('Arithmetic', [filterIdx, DEFilterIdx], {function: "A * B"});
-          await postDelete(DEFilterIdx);
-          await postDelete(filterIdx); // combined filter is at auto-EQ filter index now
-        }
+        await addCustomPEQFilters(mlpIdx, commandId[i], filterIdx); // add any user desired customizations
         cmdIdFilterIndices[commandId[i]] = filterIdx;
         await fetch_mREW(filterIdx, 'PUT', { title: `${commandId[i]}-filters` });
         const ALOffset = await getALOffset(filterIdx, isSub);
