--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -967,9 +967,9 @@
     }
     async function getDEFilterArray(start=10, end=24000) {
       // used in audy filtering mode
-      await addDialogueEnhancerFilter(1);
       const DEFilter = await postNext('Generate filters measurement', 1);
       const DEFilterIdx = Object.keys(DEFilter.results)[0];
+      await addCustomPEQFilters(1, "C", DEFilterIdx);
       const DEALOffset = await getALOffset(DEFilterIdx, false);
       const DEResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', DEFilterIdx);
       const DEFilterArray = response2array(DEResponse, start, end);
